crates/core/talkbank-parser/tests/snapshots/offset_tests__error_offset_in_main_tier.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(main, errors.into_vec())"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 506,
                                    end: 508,
                                },
                                word_id: None,
                                raw_text: "xx",
                                cleaned_text: "xx",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "xx",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                untranscribed: None,
                                lang: None,
                                part_of_speech: None,
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period,
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: Some(
                    Span {
                        start: 505,
                        end: 511,
                    },
                ),
            },
            span: Span {
                start: 500,
                end: 511,
            },
            speaker_span: Span {
                start: 501,
                end: 504,
            },
        },
    ),
    [],
)
