crates/core/talkbank-parser/tests/snapshots/offset_tests__error_offset_in_word.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 100,
                end: 102,
            },
            word_id: None,
            raw_text: "xx",
            cleaned_text: "xx",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "xx",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
