crates/core/talkbank-parser/tests/snapshots/offset_tests__offset_with_chinese_characters.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(input.len(), word, errors.into_vec())"
---
(
    6,
    Some(
        Word {
            span: Span {
                start: 500,
                end: 506,
            },
            word_id: None,
            raw_text: "你好",
            cleaned_text: "你好",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "你好",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
