crates/core/talkbank-parser/tests/snapshots/offset_tests__offset_with_multibyte_utf8.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(input.len(), word, errors.into_vec())"
---
(
    14,
    Some(
        Word {
            span: Span {
                start: 1000,
                end: 1014,
            },
            word_id: None,
            raw_text: "hello😊world",
            cleaned_text: "hello😊world",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello😊world",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
