crates/core/talkbank-parser/tests/snapshots/offset_tests__parse_main_tier_offset_zero.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(main, errors.into_vec())"
---
(
    Some(
        MainTier {
            speaker: SpeakerCode(
                "CHI",
            ),
            content: TierContent {
                linkers: TierLinkers(
                    [],
                ),
                language_code: None,
                content: TierContentItems(
                    [
                        Word(
                            Word {
                                span: Span {
                                    start: 6,
                                    end: 11,
                                },
                                word_id: None,
                                raw_text: "hello",
                                cleaned_text: "hello",
                                content: WordContents(
                                    [
                                        Text(
                                            WordText(
                                                NonEmptyString(
                                                    "hello",
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                                category: None,
                                form_type: None,
                                untranscribed: None,
                                lang: None,
                                part_of_speech: None,
                            },
                        ),
                    ],
                ),
                terminator: Some(
                    Period,
                ),
                postcodes: TierPostcodes(
                    [],
                ),
                bullet: None,
                content_span: Some(
                    Span {
                        start: 5,
                        end: 14,
                    },
                ),
            },
            span: Span {
                start: 0,
                end: 14,
            },
            speaker_span: Span {
                start: 1,
                end: 4,
            },
        },
    ),
    [],
)
