crates/core/talkbank-parser/tests/snapshots/offset_tests__parse_mor_tier_with_offset.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(mor, errors.into_vec())"
---
(
    Some(
        MorTier {
            tier_type: Mor,
            items: MorItems(
                [
                    Mor {
                        omission: false,
                        pre_clitics: [],
                        main: AnnotatedChunk {
                            chunk: Word(
                                MorWord {
                                    prefixes: [],
                                    part_of_speech: PartOfSpeech {
                                        category: PosCategory(
                                            "pro",
                                        ),
                                        subcategories: [],
                                    },
                                    stem: MorStem(
                                        "I",
                                    ),
                                    suffixes: [],
                                },
                            ),
                            translation: None,
                        },
                        post_clitics: [],
                    },
                    Mor {
                        omission: false,
                        pre_clitics: [],
                        main: AnnotatedChunk {
                            chunk: Word(
                                MorWord {
                                    prefixes: [],
                                    part_of_speech: PartOfSpeech {
                                        category: PosCategory(
                                            "v",
                                        ),
                                        subcategories: [],
                                    },
                                    stem: MorStem(
                                        "want",
                                    ),
                                    suffixes: [],
                                },
                            ),
                            translation: None,
                        },
                        post_clitics: [],
                    },
                ],
            ),
            terminator: Some(
                ".",
            ),
            span: Span {
                start: 294,
                end: 315,
            },
        },
    ),
    [],
)
