crates/core/talkbank-parser/tests/snapshots/offset_tests__parse_word_complex_with_offset.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 500,
                end: 505,
            },
            word_id: None,
            raw_text: "dog@c",
            cleaned_text: "dog",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "dog",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: Some(
                C,
            ),
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
