crates/core/talkbank-parser/tests/snapshots/offset_tests__parse_word_with_offset.snap
---
source: talkbank-tree-sitter-parser/tests/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 1000,
                end: 1005,
            },
            word_id: None,
            raw_text: "world",
            cleaned_text: "world",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "world",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: None,
            part_of_speech: None,
        },
    ),
    [],
)
